--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "udemy-mern-stack-course",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
   }
 }
